--- a/workbox-lab/project/package.json
+++ b/workbox-lab/project/package.json
@@ -7,7 +7,8 @@
     "browser-sync": "^2.18.12",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "workbox-sw": "^2.0.1"
   },
   "devDependencies": {},
   "scripts": {
