--- a/workbox-lab/project/package.json
+++ b/workbox-lab/project/package.json
@@ -8,6 +8,7 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "run-sequence": "^1.2.2",
+    "workbox-build": "^2.0.1",
     "workbox-sw": "^2.0.1"
   },
   "devDependencies": {},
