--- a/gulp-lab/app/package.json
+++ b/gulp-lab/app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^3.0.0"
   }
 }
