--- a/gulp-lab/app/package.json
+++ b/gulp-lab/app/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-uglify": "^3.0.0"
   }
 }
